--- a/packages/_react-icons_all-files/package.json
+++ b/packages/_react-icons_all-files/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-icons/all-files",
   "version": "4.7.2",
-  "description": "SVG React icons of popular icon packs using ES6 imports",
+  "description": "@forked: SVG React icons of popular icon packs using ES6 imports",
   "author": "Goran Gajic",
   "contributors": [
     "kamijin_fanta <kamijin@live.jp>"
